add some extra css in navbar

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,14 +3,14 @@
       <div class="mob-nav">
           <div class="icon icon-menu-button" id="mobile-toggle"></div>
           <div class="logo">
-              <img src="img/logo.png" class="mob-logo-image">
+              <img src="/assets/img/logo.png" class="mob-logo-image">
           </div>
       </div>
       <div class="nav-flex active" id="nav-area">
-          <img src="img/logo.png" class="logo-image">
+          <img src="/assets/img/logo.png" class="logo-image">
           <form class="search" autocomplete="off">
               <button type="submit" class="s-submit" value="">
-                  <img src="img/icon-search.svg" class="pt-1 cursor-pointer" />
+                  <img src="/assets/img/icon-search.svg" class="pt-1 cursor-pointer" />
               </button>
               <input type="text" class="s-input" placeholder="Search" name="q" />
           </form>
