--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -51,7 +51,7 @@
   text-align: center;
   margin: 0.25rem 0;
   margin-right: 1rem;
-  background: url("../../img/icon-menu.svg") left center no-repeat;
+  background: url("/assets/img/icon-menu.svg") left center no-repeat;
   background-size: 100% auto;
 }
 #navigation .nav-flex {
@@ -68,7 +68,7 @@
   top: 0;
 }
 #navigation .nav-flex.active {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0px 20px -14px rgb(0, 0, 0, 0.16);
   left: 0;
 }
 #navigation .cover {
@@ -113,25 +113,25 @@
   background: #eee;
 }
 #navigation .icons .icon.icon-user {
-  background-image: url("../../img/icon-user.svg");
+  background-image: url("/assets/img/icon-user.svg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 40% auto;
 }
 #navigation .icons .icon.icon-comment {
-  background-image: url("../../img/icon-comment.svg");
+  background-image: url("/assets/img/icon-comment.svg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 40% auto;
 }
 #navigation .icons .icon.icon-bell {
-  background-image: url("../../img/icon-bell.svg");
+  background-image: url("/assets/img/icon-bell.svg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 40% auto;
 }
 #navigation .icons .icon.icon-vip {
-  background-image: url("../../img/icon-vip.svg");
+  background-image: url("/assets/img/icon-vip.svg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 80% auto;
