change my activity Html location

--- a/src/app/pages/my-activity/components/my-mentoring/my-mentoring.component.html
+++ b/src/app/pages/my-activity/components/my-mentoring/my-mentoring.component.html
@@ -1,188 +1,201 @@
 <div id="applicant-tab-content-1">
-  <div class="text-darkblue mb-5">
-      List of your Mentoring sessions
-  </div>
+  <div class="text-darkblue mb-5">List of your Mentoring sessions</div>
   <div class="grid gap-4" md="cols-2">
-      <div class="session">
-          <div class="session-head">
-              <div class="session-avatar">
-                  <img src="/assets/img/tmp.png" alt="">
-                  <div class="icon-cert"></div>
-              </div>
-              <div class="session-title">
-                  Syed Amirali Danaparvaran
-              </div>
-              <div class="info">
-                  <a href="#">
-                      <div class="dots"></div>
-                  </a>
-              </div>
-          </div>
-
-          <div class="session-date">
-              <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                      d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
-                      fill="currentColor" fill-opacity="0.4" />
-              </svg>
-              <div class="ml-2 mr-3">12AM - 1 AM</div>
-              <div> 22 Aprill 2021</div>
-          </div>
-
-          <div class="session-bottom">
-              <div class="session-author">
-                  Rated <span class="text-w-bold">by</span> you
-              </div>
-
-              <div class="session-stars">
-                  <div class="star active"></div>
-                  <div class="star active"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-              </div>
-          </div>
+    <div class="session">
+      <div class="session-head">
+        <div class="session-avatar">
+          <img src="/assets/img/tmp.png" alt="" />
+          <div class="icon-cert"></div>
+        </div>
+        <div class="session-title">Syed Amirali Danaparvaran</div>
+        <div class="info">
+          <a href="#">
+            <div class="dots"></div>
+          </a>
+        </div>
       </div>
 
-      <div class="session">
-          <div class="session-head">
-              <div class="session-avatar">
-                  <img src="/assets/img/tmp.png" alt="">
-                  <div class="icon-cert"></div>
-              </div>
-              <div class="session-title">
-                  Syed Amirali Danaparvaran
-              </div>
-              <div class="info">
-                  <a href="#">
-                      <div class="dots"></div>
-                  </a>
-              </div>
-          </div>
-
-          <div class="session-date">
-              <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                      d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
-                      fill="currentColor" fill-opacity="0.4" />
-              </svg>
-              <div class="ml-2 mr-3">12AM - 1 AM</div>
-              <div> 22 Aprill 2021</div>
-          </div>
-
-          <div class="session-bottom">
-              <div class="session-author">
-                  Rated <span class="text-w-bold">by</span> you
-              </div>
-
-              <div class="session-stars">
-                  <div class="star active"></div>
-                  <div class="star active"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-              </div>
-          </div>
+      <div class="session-date">
+        <svg
+          width="12"
+          height="12"
+          viewBox="0 0 12 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
+            fill="currentColor"
+            fill-opacity="0.4"
+          />
+        </svg>
+        <div class="ml-2 mr-3">12AM - 1 AM</div>
+        <div>22 Aprill 2021</div>
       </div>
 
-      <div class="session">
-          <div class="session-head">
-              <div class="session-avatar">
-                  <img src="/assets/img/tmp.png" alt="">
-                  <div class="icon-cert"></div>
-              </div>
-              <div class="session-title">
-                  Syed Amirali Danaparvaran
-              </div>
-              <div class="info">
-                  <a href="#">
-                      <div class="dots"></div>
-                  </a>
-              </div>
-          </div>
+      <div class="session-bottom">
+        <div class="session-author">
+          Rated <span class="text-w-bold">by</span> you
+        </div>
 
-          <div class="session-date">
-              <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                      d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
-                      fill="currentColor" fill-opacity="0.4" />
-              </svg>
-              <div class="ml-2 mr-3">12AM - 1 AM</div>
-              <div> 22 Aprill 2021</div>
-          </div>
+        <div class="session-stars">
+          <div class="star active"></div>
+          <div class="star active"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+        </div>
+      </div>
+    </div>
 
-          <div class="session-bottom">
-              <div class="session-author">
-                  Rated <span class="text-w-bold">by</span> you
-              </div>
-
-              <div class="session-stars">
-                  <div class="star active"></div>
-                  <div class="star active"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-              </div>
-          </div>
+    <div class="session">
+      <div class="session-head">
+        <div class="session-avatar">
+          <img src="/assets/img/tmp.png" alt="" />
+          <div class="icon-cert"></div>
+        </div>
+        <div class="session-title">Syed Amirali Danaparvaran</div>
+        <div class="info">
+          <a href="#">
+            <div class="dots"></div>
+          </a>
+        </div>
       </div>
 
-      <div class="session">
-          <div class="session-head">
-              <div class="session-avatar">
-                  <img src="/assets/img/tmp.png" alt="">
-                  <div class="icon-cert"></div>
-              </div>
-              <div class="session-title">
-                  Syed Amirali Danaparvaran
-              </div>
-              <div class="info">
-                  <a href="#">
-                      <div class="dots"></div>
-                  </a>
-              </div>
-          </div>
-
-          <div class="session-date">
-              <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                      d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
-                      fill="currentColor" fill-opacity="0.4" />
-              </svg>
-              <div class="ml-2 mr-3">12AM - 1 AM</div>
-              <div> 22 Aprill 2021</div>
-          </div>
-
-          <div class="session-bottom">
-              <div class="session-author">
-                  Rated <span class="text-w-bold">by</span> you
-              </div>
-
-              <div class="session-stars">
-                  <div class="star active"></div>
-                  <div class="star active"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-              </div>
-          </div>
+      <div class="session-date">
+        <svg
+          width="12"
+          height="12"
+          viewBox="0 0 12 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
+            fill="currentColor"
+            fill-opacity="0.4"
+          />
+        </svg>
+        <div class="ml-2 mr-3">12AM - 1 AM</div>
+        <div>22 Aprill 2021</div>
       </div>
+
+      <div class="session-bottom">
+        <div class="session-author">
+          Rated <span class="text-w-bold">by</span> you
+        </div>
+
+        <div class="session-stars">
+          <div class="star active"></div>
+          <div class="star active"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="session">
+      <div class="session-head">
+        <div class="session-avatar">
+          <img src="/assets/img/tmp.png" alt="" />
+          <div class="icon-cert"></div>
+        </div>
+        <div class="session-title">Syed Amirali Danaparvaran</div>
+        <div class="info">
+          <a href="#">
+            <div class="dots"></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="session-date">
+        <svg
+          width="12"
+          height="12"
+          viewBox="0 0 12 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
+            fill="currentColor"
+            fill-opacity="0.4"
+          />
+        </svg>
+        <div class="ml-2 mr-3">12AM - 1 AM</div>
+        <div>22 Aprill 2021</div>
+      </div>
+
+      <div class="session-bottom">
+        <div class="session-author">
+          Rated <span class="text-w-bold">by</span> you
+        </div>
+
+        <div class="session-stars">
+          <div class="star active"></div>
+          <div class="star active"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="session">
+      <div class="session-head">
+        <div class="session-avatar">
+          <img src="/assets/img/tmp.png" alt="" />
+          <div class="icon-cert"></div>
+        </div>
+        <div class="session-title">Syed Amirali Danaparvaran</div>
+        <div class="info">
+          <a href="#">
+            <div class="dots"></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="session-date">
+        <svg
+          width="12"
+          height="12"
+          viewBox="0 0 12 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M6 0C2.69147 0 0 2.69147 0 6C0 9.30853 2.69147 12 6 12C9.30853 12 12 9.30853 12 6C12 2.69147 9.30853 0 6 0ZM8.85352 9.10345C8.75601 9.20096 8.62802 9.25003 8.50003 9.25003C8.37204 9.25003 8.24396 9.20096 8.14655 9.10345L5.64651 6.60352C5.55249 6.51004 5.50003 6.38297 5.50003 6.25003V3C5.50003 2.72351 5.72397 2.50003 6 2.50003C6.27603 2.50003 6.49997 2.72351 6.49997 3V6.04303L8.85352 8.39648C9.04898 8.59204 9.04898 8.90799 8.85352 9.10345Z"
+            fill="currentColor"
+            fill-opacity="0.4"
+          />
+        </svg>
+        <div class="ml-2 mr-3">12AM - 1 AM</div>
+        <div>22 Aprill 2021</div>
+      </div>
+
+      <div class="session-bottom">
+        <div class="session-author">
+          Rated <span class="text-w-bold">by</span> you
+        </div>
+
+        <div class="session-stars">
+          <div class="star active"></div>
+          <div class="star active"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+        </div>
+      </div>
+    </div>
   </div>
-
 
   <ul class="s-pagination">
-      <li class="s-pagination-item disabled prev">
-          Previous
-      </li>
-      <li class="s-pagination-item active"><a href="">1</a></li>
-      <li class="s-pagination-item">2</li>
-      <li class="s-pagination-item">3</li>
-      <li class="s-pagination-item">4</li>
-      <li class="s-pagination-item next">
-          Next
-      </li>
+    <li class="s-pagination-item disabled prev">Previous</li>
+    <li class="s-pagination-item active"><a href="">1</a></li>
+    <li class="s-pagination-item">2</li>
+    <li class="s-pagination-item">3</li>
+    <li class="s-pagination-item">4</li>
+    <li class="s-pagination-item next">Next</li>
   </ul>
 </div>
