--- a/src/app/pages/my-activity/components/my-wish-list/my-wish-list.component.html
+++ b/src/app/pages/my-activity/components/my-wish-list/my-wish-list.component.html
@@ -1,3 +1,37 @@
-<p>
-  my-wish-list works!
-</p>
+<div class="d-none" id="applicant-tab-content-4">
+  <div class="list-item grid" sm="cols-12">
+    <div class="list-item-title" sm="col-3">Title</div>
+    <div sm="col-9">ApplyChance Scholarship 2020</div>
+    <div class="list-item-title" sm="col-3">Country</div>
+    <div sm="col-9">Canada</div>
+    <div class="list-item-title" sm="col-3">Institution</div>
+    <div sm="col-9">University of British Columbia (UBC)</div>
+    <div class="list-item-title" sm="col-3">Professor</div>
+    <div sm="col-9">Apply Chance</div>
+    <div class="list-item-title" sm="col-3">
+      Application Status
+    </div>
+    <div sm="col-9">No Fund</div>
+    <div class="info">
+      <a href="#">
+        <div class="dots"></div>
+      </a>
+    </div>
+  </div>
+  <button class="button button-add">
+    <span class="icon icon-large mr-0">
+      <svg
+        width="22"
+        height="21"
+        viewBox="0 0 22 21"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M22 10.024C21.9824 10.5054 21.7698 10.9603 21.4088 11.2891C21.0478 11.6178 20.5679 11.7935 20.0743 11.7777H12.9257V18.2919C12.9085 18.7734 12.696 19.2286 12.335 19.5574C11.9739 19.8862 11.4937 20.0618 11 20.0456C10.496 20.049 10.0094 19.8654 9.63893 19.5321C9.46243 19.3744 9.32128 19.1829 9.22435 18.9694C9.12743 18.756 9.07683 18.5253 9.07573 18.2919V11.7791H1.92427C1.42005 11.782 0.933552 11.5979 0.5632 11.2642C0.386696 11.1065 0.245545 10.915 0.14862 10.7015C0.0516962 10.4881 0.00109553 10.2574 0 10.024C0.0172109 9.54249 0.229694 9.08733 0.590774 8.7585C0.951853 8.42968 1.432 8.25409 1.92573 8.2703H9.07573V1.75612C9.09295 1.27474 9.30518 0.819653 9.6659 0.490643C10.0266 0.161632 10.5064 -0.0144558 11 0.00098414C11.4936 -0.0148479 11.9736 0.160872 12.3345 0.489617C12.6955 0.818362 12.9081 1.2733 12.9257 1.75469V8.2703H20.0757C20.5691 8.25486 21.0487 8.43075 21.4093 8.75945C21.77 9.08816 21.9824 9.54288 22 10.024Z"
+          fill="currentColor"
+        ></path>
+      </svg>
+    </span>
+  </button>
+</div>
